syntax = "proto3";

option csharp_namespace = "GrpcServer_PI_21_01";

import "google/protobuf/wrappers.proto";
import "Protos/data.proto";
package authorization;

service Authorization {
	rpc LogIn (Credentials) returns (LogInResult);
}

message Credentials {
	string login = 1;
	string password = 2;
}

message LogInResult {
	bool successful = 1;
	int32 userId = 2;
	string name = 3;
	string surname = 4;
	string patronymic = 5;
	data.OrganizationReply organization = 6;
	string privelegeLevel = 7;
	//int32 idUser = 2;
	//google.protobuf.StringValue privelege = 3;
}